feat: reset password route and functionality
