# internal/workstream-gateway/services/ports/identity_service_port.go
@@ -13,8 +13,7 @@ type IdentityServicePort interface {
 	Unregister(ctx context.Context, unregisterRequest dtos.UnregisterRequest) error
 	RemoveUser(ctx context.Context, req dtos.RemoveUserRequest) error
 	RequestPasswordReset(ctx context.Context, req dtos.RequestPasswordResetRequest) error
-	/* 	GetUserData(ctx context.Context) (dtos.ResponseUser, error)
-	ResetPassword(ctx context.Context, resetPassRequest dtos.ResetPasswordRequest) error
-	UpdateUserData(ctx context.Context, updateUserRequest dtos.UpdateUserRequest) error
-	CheckUser(ctx context.Context, checkUserReq dtos.CheckUserRequest) (dtos.CheckUserResponse, error) */
+	ResetPassword(ctx context.Context, req dtos.ResetPasswordRequest) error
+	/* 	GetUser(ctx context.Context) (dtos.ResponseUser, error)
+	UpdateUser(ctx context.Context, updateUserRequest dtos.UpdateUserRequest) error */
 }
